# ChangeLog for sys-cluster/pacemaker-gui
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/pacemaker-gui/ChangeLog,v 1.8 2013/03/15 10:19:47 ultrabug Exp $

*pacemaker-gui-2.1.2 (15 Mar 2013)

  15 Mar 2013; Ultrabug <ultrabug@gentoo.org> +pacemaker-gui-2.1.2.ebuild,
  +files/pacemaker-mgmt-query-node-uuid.patch:
  Version bump supports newer pacemaker versions

  23 Nov 2012; Ultrabug <ultrabug@gentoo.org> pacemaker-gui-2.1.1.ebuild:
  Does not work with >=pacemaker-1.1.8

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> pacemaker-gui-2.1.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*pacemaker-gui-2.1.1 (08 Mar 2012)

  08 Mar 2012; Ultrabug <ultrabug@gentoo.org>
  -files/pacemaker-gui-2.0.0-doc.patch,
  -files/pacemaker-gui-2.0.0-gnutls.patch,
  -files/pacemaker-gui-2.0.0-noGTK.patch, -pacemaker-gui-2.1.0.ebuild,
  -pacemaker-gui-2.1.0-r1.ebuild, +pacemaker-gui-2.1.1.ebuild,
  +files/pacemaker-gui-2.1.1-doc.patch, -files/mgmtd.init:
  Version bump, drop old init script based version, drop non upstream GTK
  handling.

  05 Feb 2012; Mike Gilbert <floppym@gentoo.org> pacemaker-gui-2.1.0-r1.ebuild:
  Inherit multilib.

*pacemaker-gui-2.1.0-r1 (27 Dec 2011)

  27 Dec 2011; Ultrabug <ultrabug@gentoo.org>
  +files/pacemaker-gui-2.0.0-noGTK.patch, +pacemaker-gui-2.1.0-r1.ebuild,
  metadata.xml:
  Make the compilation of the GTK client optional via the gtk USE flag, fix
  #392201. EAPI4. Drop the useless init.d and change the log message
  instructions thanks to Vladimir Varlamov.

*pacemaker-gui-2.1.0 (12 Oct 2011)

  12 Oct 2011; Ultrabug <ultrabug@gentoo.org> -pacemaker-gui-2.0.0.ebuild,
  +pacemaker-gui-2.1.0.ebuild:
  Version bump, drop old.

*pacemaker-gui-2.0.0 (21 Feb 2011)

  21 Feb 2011; Ultrabug <ultrabug@gentoo.org> +pacemaker-gui-2.0.0.ebuild,
  +files/pacemaker-gui-2.0.0-doc.patch,
  +files/pacemaker-gui-2.0.0-gnutls.patch, +files/mgmtd.init, +metadata.xml:
  Initial import