@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prepare setup unpack
-DEPEND=app-arch/bzip2 dev-libs/glib:2 dev-libs/libxslt dev-libs/openssl net-libs/gnutls sys-apps/util-linux sys-cluster/cluster-glue ( >=sys-cluster/pacemaker-1.1 <sys-cluster/pacemaker-1.1.8 ) heartbeat? ( sys-cluster/pacemaker[heartbeat] ) gtk? ( dev-python/pygtk ) sys-libs/ncurses sys-libs/pam sys-libs/zlib gtk? ( dev-lang/swig ) virtual/pkgconfig nls? ( dev-util/intltool sys-devel/gettext ) =dev-lang/python-2* !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
-DESCRIPTION=Pacemaker python GUI and management daemon
-EAPI=4
-HOMEPAGE=http://hg.clusterlabs.org/pacemaker/pygui/
-IUSE=-gtk heartbeat nls snmp static-libs
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2 LGPL-2.1
-RDEPEND=app-arch/bzip2 dev-libs/glib:2 dev-libs/libxslt dev-libs/openssl net-libs/gnutls sys-apps/util-linux sys-cluster/cluster-glue ( >=sys-cluster/pacemaker-1.1 <sys-cluster/pacemaker-1.1.8 ) heartbeat? ( sys-cluster/pacemaker[heartbeat] ) gtk? ( dev-python/pygtk ) sys-libs/ncurses sys-libs/pam sys-libs/zlib sys-devel/libtool =dev-lang/python-2*
-SLOT=0
-SRC_URI=https://github.com/gao-yan/pacemaker-mgmt/tarball/pacemaker-mgmt-2.1.1 -> pacemaker-gui-2.1.1.tar.gz
-_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	3a270b7b1d1e679847ff0faeac25c5a3	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=7e667bf2ed9711c1ae49b6eb6f726989
