@@ -4,10 +4,10 @@ DESCRIPTION=Linux quota tools
 EAPI=4
 HOMEPAGE=http://sourceforge.net/projects/linuxquota/
 IUSE=ldap netlink nls rpc tcpd
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 ~arm hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=ldap? ( >=net-nds/openldap-2.3.35 ) netlink? ( sys-apps/dbus dev-libs/libnl:1.1 ) rpc? ( net-nds/rpcbind ) tcpd? ( sys-apps/tcp-wrappers )
 SLOT=0
 SRC_URI=mirror://sourceforge/linuxquota/quota-4.02.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=53fb9c22848fd155c041ad33d642d56f
+_md5_=5790b2fd9023bcf41363f7543b5212ee
