@@ -3,16 +3,26 @@ Hash: SHA256
 
 AUX pacemaker-gui-2.1.1-doc.patch 421 SHA256 5f42694bc0e007be7677cd2a5a9ac0dc046e43be6888e7da9c5f33f5a8ade3e2 SHA512 2a49cfb393c531200915a02f7c4d4a69dfc5130a9eb7661cbd048c25dae263291aa13323feb9c8ed0249c611a88ed2c6d66b56785bb3c79e421c7e98a6d5a18e WHIRLPOOL b149cf152a8ead929795a23f481bcd153422e1597097bdff0607271fe2543e26d69fa68558a5294ea995069da8ccc95d1e569d35c337f1cade2e026ae681c64f
 AUX pacemaker-mgmt-query-node-uuid.patch 533 SHA256 5632ed448acb44c13f45a229c529af89ffacd37ec8432593e06df265171d1140 SHA512 6a914135fd685a476b6f71b8bdb52825c1a844c8e2a622c31ac5978aa59049968ce3eade72766678c60cd7c66d30cd0f900ac2f25172dd7f988bbba203d67e5f WHIRLPOOL 7710166873d5ceaf6390d6594ec056bbde73870e14d19e5f5aa17b47393bb29e907c79808ced3708d3cca3482f9dc9547213a697e25c0e83cc3d6d6397092960
-DIST pacemaker-gui-2.1.1.tar.gz 394443 SHA256 62609ef13591502ce8b7d67702eb2d2b89fada8cd8556a1d2a8f9754a8de1211 SHA512 5b14ad4c87c52f13befa163fbf77e2cbb47e0c161cba909a90686872cfd4fbae994aeece077473c6ba486091d53e23971c86934e040fab8fc99a795259e33e7a WHIRLPOOL b8d5b106dd5f306755a23ac63c3f489405de2bc44c67d7ef9fc1dcbd64a424fbe2045217563e093ebafcee97e2cb3b53d93c57702acd42443d41bf2c6fedee21
 DIST pacemaker-gui-2.1.2.tar.gz 398311 SHA256 9c431916a186c027fe714b46acf84f017440ed120cdca174cf244cd946fbfac3 SHA512 7d1bffbe6478a250452ce692371f2e47d6cba11eaa2a7684e99cf2befdb32662c092d0e6b59973fe076ed9ce640082fd4ebb3e7b7cd8730cfa697af82dfdf06f WHIRLPOOL 3f2913a283d9a2ef18153d10f477348e15c292a19070173dec761e0f5aee2999c7395476e237e6d5690efdc29d9157de4a0d6ef2280b46f7c8895057b3850428
-EBUILD pacemaker-gui-2.1.1.ebuild 2034 SHA256 7f4bdede253b5146646aa9f6951a9aefcdb3f8f1cd370bdb2ce8347541b836bd SHA512 efea95a12ed152e4598eae74e4f9fcaa03398ac439d272eec66dff93d317cc350b38220c3841f681d545e39e98edaaa248b8a60bda21f28101d287ca5b084085 WHIRLPOOL 58564672544a3ab1c4ecd68accf92c3328514db61e924fa1ca08ce29ee420884c9e98f394fd89804421600b39721782254ab1f3c0560311d6a0900716a58f368
 EBUILD pacemaker-gui-2.1.2.ebuild 2182 SHA256 c73b93385fcb69582dd6029654c054176444cd6f43a26228c03394db1eec7c45 SHA512 4f138a0ba48d867cab38e66a47f16c5a316939630c489038b504e3233cc9bc020c71c767a6baf253efbd99437b92a12d7e832b0da05fef7705ac12db530898f5 WHIRLPOOL eb571c4630ac61d34997e97060db9c0fc0552fac5a4a631acc7602d52fe40bd2211b648559325ffca490783fdaec553956374dabefe514f93bd0ac1ba40be955
-MISC ChangeLog 1992 SHA256 59b54c53fee9e7901f066c6a4f11871469c31ac67087fe5a31d280ea1352fafb SHA512 8cdc3855952feeb2c36753a87b7449a1d78b2a450ead60829fb124e63dc194e2b593feb65d8cdbba8a5996b1f68fd1875fca51d7abaa5ba9c03a6c3d0f28e540 WHIRLPOOL a72e839061ba70a4273c8e3808f3f26c2ad05664b38a003cfce61dceb95dd73b6d06f60c4d6c1780f09701e0b70a7a78efeaafd9f2f21217f41d1f4f7312f47a
+MISC ChangeLog 2140 SHA256 bd32bfd25730751b183660e2cc1c255daa93b3d694913496f83e444ff6928a9f SHA512 d66b0e52bf1efbd32769cc498a31519f7d8c4263182d5de173f96b8b5c3a60d88b5e48a694c3bc735dd03426c68bd149080b62e026664f46723785cba925975e WHIRLPOOL 2c29773a6cc44ca4c2f8edee1aab85dd03c878594393d81da1455af894d79bf728894226c3fccc6c4f9596e94d874e9e205855158b80c843cf239eed9b0dbbe5
 MISC metadata.xml 429 SHA256 aa528f0fc82c129c23cc4339f3701b0265388d40a3e8f907f4fdddd452d829e0 SHA512 626c99d13d67c664378cff8a924282a360dbd4d843b34e40e244040569828c89b97ec16c5f90d2c9f0c2687bee3d28f6f4ef9f9e54495095c959ef6c9ea96e43 WHIRLPOOL 0d94cfad997a0eeaed78884814e1dac53ca9a938c9bf16c1435a66a9aedcb5d9a36b0a588db4dddc1361abcdac400a43291a7da5db3f7243e9a17dae3783fe42
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlFC9ckACgkQKiQSS7ZY+hN7nAEAyK46RbJYX4pzKbj/JUTiSG9F
-WsqnOijevPn1X65FIH4BAJAhgUhbjZuDfg0M8xjbuig4Zp02nf2HchNhuqGr4+0a
-=1QTZ
+iQJ8BAEBCABmBQJVI/yVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO8rgQANYVoCxB57id4INWurjwHctP
++xMKRG4aO3dJZqDrsLLReY+UHIkexG3lzf83HSsAgccrmM/IWEEmUtlaNRGwgmYq
+0R22zSa3SbG3ERmtKyqY0/u6v5gmfHy8wJ6ZbCq0Qkdftw56OV04OchWoEXDoeve
+D0uQSaW1fx5rG959FX9JZm49C0w5+puA/4pLZBTnXnAcUsPJho7WOuAyC6p9OToN
+Or4EwwXtd1/4+4cr5rapEofaXI4bqAOJy5OCxid887PahCVR3APaJBk9ppJ2DlJY
+MWt+IexVCoRPxJsKD7o6JRVmIEpHjQaPn/BklaUJyzeftyO7x0yaxg1Mge/6mJo1
+YTmhsNucBJ3LwhMVHfJNEGyMYrHtllwCQPr2CiWivlZI+h1yCXFJr7QspRBCBf7K
+Luia7eZtBEuI3IxgH2Gk951K4c+pgq0I+wfkYJNxkoDC15JiDCYfVSv/T0K0/zed
+et18lp9Wfu+KIFlB5a4JGQAnnzy8RNyx7QzIOZ/VDA3upjPkWGOAc8/KEfjQWJTN
+nEJTOkmygBdNAV4zdB9ghBQwTMqqn6UPOgkdDKhWRWCB1zk0nepUy8BC0wDxzPxC
+Xuq6eCy8Hn75RI5nYDgHudz38C57oNnMPM1zfawBskoej3IZ7AkU8p1Hx+7PnggO
+5JU6NSg+aKGDi/PGsMWQ
+=nO4A
 -----END PGP SIGNATURE-----
