@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX quota-4.01-cflags.patch 1691 SHA256 462950307781bf65a4b876a52b0bcb15c60154de51404133787207c7aea7637f SHA512 be7976332fbccfe65277cc8835573809b059d8a8bae7dc5402e4b7f649910bede896f7b1c5d20d2d2e386cd2d1ebfacf4d08f652b58b86d06490b72f0b7c97f8 WHIRLPOOL ecce179e22a42997c920d16c479cfb64b8eb6f6946671f01800bec8fab3e8242190506ceda96315d291f6b55834782063a98fc4261bf2dbf16cfa518eed95fcc
 AUX quota-4.01-mnt.patch 361 SHA256 8d0a6b02ed023667743364edfa63de22a5908659bf6786b150523a43656065de SHA512 986fdcbb8b892b5e0979cef0e0b4dfd41eddd0526ee9dbbacd68444200f082eaa9885e44a2cae52d0a5607178158fcfbd11097c5728034d7fdfcc105700d6b08 WHIRLPOOL 1d5441f2d5c1ee6ad4d5af4653add1adcbb994ba578e2ee8f8c78d4e519d9baa1e6640eca39201c5ef476fabb44167033c53f000d2af982388fb172bbdf846dd
@@ -12,25 +12,13 @@ DIST quota-4.01.tar.gz 458123 SHA256 a36300bbc126b79b745bf937245092808b4585aa330
 DIST quota-4.02.tar.gz 489289 SHA256 f4c2f48abf94bbdc396df33d276f2e9d19af58c232cb85eef9c174a747c33795 SHA512 547e08893b95928e5d183d29bee70d1932f85a675b96f64446e5a723d0759ad2d31223f8b6a5652cd698fce4907a15c294b91c18de32faddbef4975c9f22f2aa WHIRLPOOL eb102a14dfe780b7ed062c3c7abec1ef766beb31c18d92c5115ca703672ebb7e7bfb0479885c6c8c78520554aeb477bc1f4d48fbb76b0336047f42b55af49036
 EBUILD quota-3.17-r1.ebuild 1891 SHA256 53f4c157b8e7d707c8e80443b929021eacd663a67a049d5407aced5e122a71dc SHA512 95446392f9568cac21e767a4f76191588fe73554ba7b0f9b4624e2f831aee012643e111fb61194ab3dfd5d231908bba6eae93121f9079feb6026c6d3c3b4b562 WHIRLPOOL 95f1e2949d807bb67e2fc0d70be827db705d8d334dcaf068a98749c8517d020a8910cfc2b165091213d380156e96b4eba72ca226ef04cd810ca2d8d7fc5b7de4
 EBUILD quota-4.01.ebuild 1803 SHA256 0228d6db601bc6f15a897bfff45b7411a59e11e54b8b745ef1f2cfb1f505ea1f SHA512 f6371b2930d399ee95114d8638b6dbc635e20abc569458ab4b3ee65fb7a2637443d0992547024449129452132d795349776688e15483c55a4449b9e75a0f97a3 WHIRLPOOL 002a428fde1913db5bd2dc873d551082e148eac1bf8617f49a78b986071b2f39a5dd89881917de2bc78691d7b8c5f00d052431b9a3a3adb08dd7c1f51aa67117
-EBUILD quota-4.02.ebuild 1722 SHA256 beab1cf17d89daace8ebe4420fe8175a12fe79ffb6f35b54ef785b3573ecc991 SHA512 a2e6a942cffd869d2db94476a24bd5ddb974a7b637f97d42d648adf244a855200ecb26740298151a9c555400d368726c25e7e9106cdd384c7f682ef3a23be1b5 WHIRLPOOL a5b5adfef3ef8763e43859d37ec684560724f9984f82a6cf18416b76bb12a204e3d400858600ea14ed1fd601c3f9652fdfa9982dbc9ae5a68690fbf2a05ee89d
-MISC ChangeLog 12878 SHA256 3ffba385c2aba596d1b5d7bdf81b1f678754cd0e23e159d8c1d6d1312da997c3 SHA512 074c6003a8443a23c5051afefbc0240bc4655bdcba7626294bc8b8864667aa9ea55f640fa66976407966115a740a556de28cb03aa8c01e3e72179c733cead0e4 WHIRLPOOL 1f845ccde5fa9e8e09fa1d45b66da1643f84635ef657471dd549c7b36991530e8e05ccc12f45836c9c5c19ab807b42359ee61e33f355df6855cba360e9a5e818
+EBUILD quota-4.02.ebuild 1712 SHA256 6051c71fc8b5f3ebea78f8e098c57d17d1884adcead84b042e2ff980258e8d35 SHA512 1d4d6aae7faf6a84a31cb7f8ac9ac8b863b0fc1919ab71282294c11068f13197bcbeb87846b2337bf6e3579de76177df949c7a29b513404a7047be08562f5ba6 WHIRLPOOL 7b5245da19ca10acc77b5ea603fbfef2193a0d077ea027f215ea35a8cd864f7d2d7104735e7824cbac3d0007e6e146708c317a8df5bae1e63237904a66900f73
+MISC ChangeLog 12977 SHA256 a9e3ca3c63a11f2fea7eebbbf68efb1e2e187ba3fae1497b2ac8e59b2e468e05 SHA512 90732589d524be1b9198b9f55e963d7e9708d71d4a84d73e8ecd699140dacccb853e94d370bc253e915e2496a5006f08f515d092d30ead8601cb3ebb90840977 WHIRLPOOL 8a26bc8bf35e00c050253a717074af6c7507676ca43840c7daf04e11e11b71f06e556fdde0615d1508496d7917906db0525de5284905ee17bc6985076e29aaa6
 MISC metadata.xml 316 SHA256 2fbc87f6daabedc2c95877c2dd6cc34e99a35ec0024553e8204e0e8918d54fb8 SHA512 2d37a67df2a7d583f409895ee84abcc28d0a44a123218adca497ffdc64bdf93cf4524a288a35314b688e0c24ac0dd6884afc14137d65fa9ecc4770796713d923 WHIRLPOOL b39c1b220f1f1ee6938dc0de3b55d2db3e9705ff73188b40a340b25c32fe6c2ce4ada9d4c0df80ddc3959fdc766fd5b9334a64b3e87b1e0cd1940148d895319a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVDXseXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirMqYP/1HWW+xcArW9BSZDy0Loschg
-USDMzF7D1Zie616ydSMAUp9ySTK7vXhdAJF4YEwpr1RAHY7mBIIJ6mHV6Eh9v34q
-glDd8ngMlk/tmsnkeD33AGSNYU2+XsSbhuRf5dSLEURBEUVg1AWpEB8GWk7mC+pD
-mTjNPFkESXrkgyPi2GZ0wjkrCgpoS6KWdCWUQQOoSKlXw0SXEjlMW9+e7Yy527Yc
-BPnxrCf7Ec0gcWnv6nhRjG8MFPzNuF5ll7HbRwSLX7fsGFJwok914jwPw9fsvPDf
-rainBrMpfTNClqJ6WwmOTpuhJnGI8wDUvIhE7b3gw9uVZD4S3ZvkbpTzDhpq25Md
-M6FR5AlOzFivflM9+nJW72+bLNAL7+9sjtUmunYZZT7+tVQ6LtYQnH/0BqPOcyhI
-BUzpx8Q3ZrTw8x2GYcPFcE+oQQ3YTk9qm7OSDzD/De2cZGLmc2wMm0ZKk1TkeWoj
-GymwU3V5NRcyVLadR1CFU/wDm9ViSCjs9KiA1mNTjKWoSaDLBmB0Q6SHG4ZwgG0U
-E481nyTmCYj66mQcmz2vt4n2ePb3NZMW3Oyw5EF6nQl47vFggej9bMDvL2L0umTz
-E3V0k70bg8+CbPvQeynsVA1TA8Li6QArqIcjN55Z5y2n4NJeRsKLmR/qZQXMh3Mt
-vnfWbV6HJcX1N+XeZeD5
-=OUAv
+iEYEAREIAAYFAlUj/VkACgkQVWmRsqeSphNaLgCfaNQf5tKcT7bxdScxJplN7+S1
+hdkAnjceXMkLQbGcIh52AWjbn+dUpxZg
+=NahU
 -----END PGP SIGNATURE-----
