@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/quota
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/quota/ChangeLog,v 1.68 2015/03/21 14:07:25 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/quota/ChangeLog,v 1.69 2015/04/07 15:52:56 jer Exp $
+
+  07 Apr 2015; Jeroen Roovers <jer@gentoo.org> quota-4.02.ebuild:
+  Stable for HPPA (bug #545586).
 
   21 Mar 2015; Justin Lecher <jlec@gentoo.org> quota-3.17-r1.ebuild:
   use ecvs_clean
