@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/pacemaker-gui
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/pacemaker-gui/ChangeLog,v 1.8 2013/03/15 10:19:47 ultrabug Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/pacemaker-gui/ChangeLog,v 1.9 2015/04/07 15:49:40 mgorny Exp $
+
+  07 Apr 2015; Michał Górny <mgorny@gentoo.org> -pacemaker-gui-2.1.1.ebuild:
+  Drop old version due to unsatisfiable deps (old pacemaker version).
 
 *pacemaker-gui-2.1.2 (15 Mar 2013)
 
